# djinn

./: .cproject  .gitignore  .project  .travis.yml  Makefile  Makefile.am  README  README.md  autogen.sh  balz.h  compressors.h  configure.ac  ctx_model.cpp  ctx_model.h  ctx_model1.h  djinn.cpp  djinn.h  ewah_model.cpp  ewah_model.h  frequency_model.cpp  frequency_model.h  gt_compressor.cpp  gt_compressor.h  gt_decompressor.h  libtool  main.cpp  model_ad.h  pbwt.cpp  pbwt.h  r32x16b_avx2.cpp  r32x16b_avx2.h  range_coder.cpp  range_coder.h  range_coder64.cpp  range_coder64.h  rc.h  vcf_reader.h
.github/workflows/: ccpp.yml
djinn-0.1.0/: README
examples/: encode.h  htslib.h  iterate.h  iterate_gtocc.h  iterate_raw.h  iterate_vcf.h  minimum_example.cpp
lib/: bitvector.h  compressors.h  ctx_model.cpp  ctx_model.h  djinn.cpp  djinn.h  ewah_model.cpp  ewah_model.h  fastdelta.h  frequency_model.h  pbwt.cpp  pbwt.h
